--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ name: Blog Name
 description: Software Developer
 
 # Url is currently only used only for the RSS feed in feed.xml
-url: http://streetturtle.github.io
+url: http://blog.lcinx.com
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
 baseurl: '/lcinx.github.io'
 
-author: Pavel Makhov
-copyright: 2015-2018
+author: lcinx
+copyright: 2008-2019
 
 share:
   facebook: true
@@ -38,7 +38,7 @@ yandex_metrica:
 # Set this to your disqus shortname to enable comments. Note that the 'comments'
 # setting below must also be true. Individual posts can override 'comments' to
 # disable on a post-by-post basis
-disqus: streetturtle
+disqus: lcinx
 comments: false
 
 permalink: /:year/:month/:title/
