--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: http://blog.lcinx.com
 #url: http://localhost:4000
 
 # For a project page here should be a project name. Otherwise (for user's/organization's page leave it empty)
-baseurl: '/blog.lcinx.com'
+baseurl: '/lcinx.github.io'
 
 author: lcinx
 copyright: 2008-2019
