--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ author: lcinx
 copyright: 2008-2019
 
 share:
-  facebook: true
-  twitter: true
-  gplus: true
-  linkedin: true
-  pinterest: true
+  facebook: false
+  twitter: false
+  gplus: false
+  linkedin: false
+  pinterest: false
   email: true
 
 social:
